<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/frameLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".plants.view.fragment.ByHourFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/scheduled_explanation"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckedTextView
        android:id="@+id/onSunrise"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checkMarkTint="@color/colorPrimary"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/on_sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afterSunset"/>

    <CheckedTextView
        android:id="@+id/afterSunset"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checkMarkTint="@color/colorPrimary"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/after_sunset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"/>

</androidx.constraintlayout.widget.ConstraintLayout>