<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".irrigation.view.activity.PlantConfigurationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/accentGray"
        android:gravity="center"
        android:text="@string/irrigation_program"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humiditySelector"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/accentGray"
        android:gravity="center"
        android:text="@string/required_humidity"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/humiditySelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.pedrodavidmcr.agarden.base.view.custom.PresetRadioGroup
        android:id="@+id/humiditySelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:presetRadioCheckedId="@+id/lowHumidity">

        <com.pedrodavidmcr.agarden.base.view.custom.PresetValueButton
            android:id="@+id/lowHumidity"
            style="@style/PresetLayoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:presetButtonUnitText="de humedad"
            app:presetButtonValueText="60%"/>

        <com.pedrodavidmcr.agarden.base.view.custom.PresetValueButton
            android:id="@+id/mediumHumidity"
            style="@style/PresetLayoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:presetButtonUnitText="de humedad"
            app:presetButtonValueText="70%"/>

        <com.pedrodavidmcr.agarden.base.view.custom.PresetValueButton
            android:id="@+id/highHumidity"
            style="@style/PresetLayoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:presetButtonUnitText="de humedad"
            app:presetButtonValueText="80%"/>

        <com.pedrodavidmcr.agarden.base.view.custom.PresetValueButton
            android:id="@+id/maxHumidity"
            style="@style/PresetLayoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:presetButtonUnitText="de humedad"
            app:presetButtonValueText="90%"/>

    </com.pedrodavidmcr.agarden.base.view.custom.PresetRadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabTextColor="@android:color/white"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/configuration"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                app:tabGravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"/>

</androidx.constraintlayout.widget.ConstraintLayout>